--- a/DripLuxury-Closet/angular.json
+++ b/DripLuxury-Closet/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "storefront": {
+    "DripLuxury-Closet": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/storefront",
+            "outputPath": "dist/drip-luxury-closet",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -57,10 +57,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "storefront:build:production"
+              "buildTarget": "DripLuxury-Closet:build:production"
             },
             "development": {
-              "buildTarget": "storefront:build:development"
+              "buildTarget": "DripLuxury-Closet:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -68,7 +68,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "storefront:build"
+            "buildTarget": "DripLuxury-Closet:build"
           }
         },
         "test": {
@@ -91,8 +91,5 @@
         }
       }
     }
-  },
-  "cli": {
-    "analytics": false
   }
 }
